# plexus

./: README.md  docker-compose.yml
integration-service/: app.py  main.py  pyproject.toml  requirements.txt
integration_service/: Dockerfile  app.py
integration_service/oauth/: provider.py
orchestrator/: Dockerfile  main.py  pyproject.toml  requirements.txt
