[project]
name = "orchestrator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.13"
dependencies = [
    "boto3>=1.43.25",
    "fastapi>=0.136.3",
    "groq>=1.4.0",
    "httpx>=0.28.1",
    "langchain-core>=1.4.2",
    "langgraph>=1.2.4",
    "pydantic>=2.13.4",
    "pyjwt>=2.13.0",
    "python-multipart>=0.0.32",
    "tenacity>=9.1.4",
    "uvicorn>=0.49.0",
]
